# src/main/java/bswe/gamifiedevidencebasednursing/feature/admindashboard/controller/SubmissionController.java
@@ -1,0 +1,27 @@
+package bswe.gamifiedevidencebasednursing.feature.admindashboard.controller;
+
+import bswe.gamifiedevidencebasednursing.feature.admindashboard.dto.request.AnalyticsSubmissionFeedbackDto;
+import bswe.gamifiedevidencebasednursing.feature.admindashboard.service.SubmissionService;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
+
+@RestController
+@RequestMapping("/api/admin/submission")
+public class SubmissionController {
+
+  private final SubmissionService submissionService;
+
+  public SubmissionController(SubmissionService submissionService) {
+    this.submissionService = submissionService;
+  }
+
+  @PostMapping(value = "/analytics")
+  public ResponseEntity<String> analyticsSubmissionFeedback(@RequestBody
+                                                            AnalyticsSubmissionFeedbackDto analyticsSubmissionFeedbackDto) {
+    return submissionService.analyticsSubmissionFeedback(analyticsSubmissionFeedbackDto);
+  }
+
+}
