# src/main/java/bswe/gamifiedevidencebasednursing/feature/roomofanalytics/dto/request/SubmissionDto.java
@@ -1,0 +1,49 @@
+package bswe.gamifiedevidencebasednursing.feature.roomofanalytics.dto.request;
+
+import java.util.List;
+
+public class SubmissionDto {
+
+  private long roomId;
+  private long levelofEvidenceQuestionId;
+  private String levelofEvidencAnswer;
+  private List<OpenQuestionSubmissionDto> openQuestions;
+
+  public SubmissionDto() {
+  }
+
+  public SubmissionDto(long roomId, List<OpenQuestionSubmissionDto> openQuestions) {
+    this.roomId = roomId;
+    this.openQuestions = openQuestions;
+  }
+
+  public long getRoomId() {
+    return roomId;
+  }
+
+  public void setRoomId(long roomId) {
+    this.roomId = roomId;
+  }
+
+  public List<OpenQuestionSubmissionDto> getOpenQuestions() {
+    return openQuestions;
+  }
+
+  public void setOpenQuestions(
+      List<OpenQuestionSubmissionDto> openQuestions) {
+    this.openQuestions = openQuestions;
+  }
+
+  public long getLevelofEvidenceQuestionId() {
+    return levelofEvidenceQuestionId;
+  }
+  public void setLevelofEvidenceQuestionId(long levelofEvidenceQuestionId) {
+    this.levelofEvidenceQuestionId = levelofEvidenceQuestionId;
+  }
+  public String getLevelofEvidencAnswer() {
+    return levelofEvidencAnswer;
+  }
+  public void setLevelofEvidencAnswer(String levelofEvidencAnswer) {
+    this.levelofEvidencAnswer = levelofEvidencAnswer;
+  }
+}
