# src/main/java/bswe/gamifiedevidencebasednursing/feature/roomofanalytics/dto/response/AnswerDetailDto.java
@@ -1,0 +1,7 @@
+package bswe.gamifiedevidencebasednursing.feature.roomofanalytics.dto.response;
+
+public record AnswerDetailDto(
+    Long questionId,
+    String questionText,
+    String answerText
+) {}
