# src/main/java/bswe/gamifiedevidencebasednursing/feature/roomofanalytics/dto/response/QuestionFeedbackResultDto.java
@@ -1,0 +1,7 @@
+package bswe.gamifiedevidencebasednursing.feature.roomofanalytics.dto.response;
+
+public record QuestionFeedbackResultDto(
+    Long questionId,
+    boolean approved,
+    String answerText
+) {}
